@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-misc-2.3.1.ebuild 319 RMD160 c7890153300c5a711b299dcd7494c45d1cb48d6e SHA1 2ac88eba5920554ea2e0076b0281c616822b74a6 SHA256 937c03b006ac7fbf45afe8be89381523bd846e3b105d2195f2f2df2235f7eb8a
-EBUILD lucene-misc-2.4.0.ebuild 319 RMD160 463263658f18d824e17ade6aae68b93e9204b46c SHA1 68c5f734af8a4bc66778b995bcae71d05d6c6813 SHA256 31b037da6857d4639608ec6671cca912415851fdc94d3451959389a6979db569
-MISC ChangeLog 444 RMD160 d45e6c1e7a2af6b8149f6f78b39fb57f79261be3 SHA1 64aa8e646b6e7d21c98346812514001a08ca0279 SHA256 70b1d4aba7c14e4e29485b29e31dafb95545c4d7d4c9527aa0e38efc8d48fff9
+EBUILD lucene-misc-2.3.1.ebuild 326 RMD160 4b619053fce18416066353223657ce34fdec0ef7 SHA1 9c3f7f28192ae707d8558a763e13266a68d25090 SHA256 534aec3aa5f4a923b65f9d49b47b16a33521ba24a6b0c94ac26b3eb134a1b741
+EBUILD lucene-misc-2.4.0.ebuild 326 RMD160 b3587ade0ccf5e4afdca460d092853140e53e3bd SHA1 161641697191394655268a17f80e7caed20de9d3 SHA256 1d010a67a1bdd2cb1f22e237edc8d777521456fa0f3a1dc3330d46e256865fd4
+MISC ChangeLog 575 RMD160 eb87470fc187ac5050d214ac1a804c6221860ab6 SHA1 4fe9ef7e14e3f64f41d3869b28d24597a5f8e400 SHA256 e062e64d6835886e7ae76ee8b73fed8b82fe885116d4dfbc11e275cb6e70a87d
 MISC metadata.xml 237 RMD160 7c60609d03e69c8715938ebda9cb28604783d7c3 SHA1 edea6c9a1dac7c46c4fff45737a9dcde9a5fae5a SHA256 57003b97a2a9f6ac56844db7faa4d6b2bb6571b62702f8f5434d1a272a891791
