@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-spellchecker-2.3.1.ebuild 574 RMD160 c643f3de583eefcf16de8d07b35b8638cfbde530 SHA1 8e559ac3757e465f72329250cabe01c467dbf881 SHA256 5a721d4429e508b93930bb295cc7d5634b0280da2581a0bc9b5200944d327958
-EBUILD lucene-spellchecker-2.4.0.ebuild 574 RMD160 3417f91b4380585b94be9a03aa1d2715f3129798 SHA1 56f5f7a76cd7d61375f07c1b6f0f95ce4177f282 SHA256 307c3fa7985c71a91b43f029a9decfc6dcaa19e786515094144a85b6a916e854
-MISC ChangeLog 460 RMD160 d6b91da5990f3596c607fc97af55662d79c80d6c SHA1 dc2ff07e87d7328dbd0c8a0790c5b7bed64b8cf7 SHA256 9b70d12d7020e8460d86c02cf6705251d0ce774fcefaf0d8001e330184dbc9d1
+EBUILD lucene-spellchecker-2.3.1.ebuild 595 RMD160 754d237e90b76f7250d5817c22aa839f1d79cb67 SHA1 e39f1bd9b1d216ccabc13725f9f7e874d686f8f3 SHA256 dc365988c2065e949bb4e5b611697744275326014e56b24b820e6d2bae38decf
+EBUILD lucene-spellchecker-2.4.0.ebuild 595 RMD160 57e8cd3599c9f504f8e6efc57336a3c9e3aeeee3 SHA1 f9422ead24069224ac011a3c01ec28c4f7d043f2 SHA256 dc28f85f42beb2b8da2a12f1939fc22ffd263654f31588a6fb44ff338c56a704
+MISC ChangeLog 607 RMD160 a3df4a7b47ae10525a7830228e42170ecd3971b2 SHA1 571fb7091fc5557ea3d9d43622ec4376e35c5b48 SHA256 de20a5c8433d04b261b67272f7f01da780ed3d03c74d461eb2a4f70142a1743a
 MISC metadata.xml 245 RMD160 046a98413986a56194ce48a76c15bf0316371d3c SHA1 4da24d1d441da2fc53e9d8e9da8bcc88a8873c97 SHA256 6bfdaf8ce5e538352643b18d0b1a4dfc7cb54a73e174a2578e061e6e12ce777e
