@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Feb 2009; Serkan Kaba <serkan@gentoo.org> lucene-misc-2.3.1.ebuild,
+  lucene-misc-2.4.0.ebuild:
+  Add necessary call to die.
+
   25 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
   +lucene-misc-2.4.0.ebuild:
   Version Bump
